// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch[Base] should render correctly  1`] = `
<button
  class="c-t2ecel soui-switch-wrapper"
  role="switch"
  type="button"
>
  <input
    style="display: none;"
    tabindex="0"
    type="checkbox"
  />
  <div
    class="c-tbhpld soui-switch-indicator"
    dir="ltr"
  />
  <div
    class="cvbb1jt soui-switch-content"
  >
    <div
      class="ciaxj5w soui-switch-text-padding"
    />
  </div>
</button>
`;

exports[`Switch[Base] should render correctly about loading 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px; align-items: center;"
>
  <button
    class="c-t2ecel soui-switch-wrapper cbjyctw soui-switch-wrapper-checked c-hwp035 soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-tbhpld soui-switch-indicator"
      dir="ltr"
    >
      <div
        class="cl58124 soui-switch-loading"
      />
    </div>
    <div
      class="cvbb1jt soui-switch-content"
    >
      <div
        class="ciaxj5w soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-t2ecel soui-switch-wrapper c-hwp035 soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-tbhpld soui-switch-indicator"
      dir="ltr"
    >
      <div
        class="cl58124 soui-switch-loading"
      />
    </div>
    <div
      class="cvbb1jt soui-switch-content"
    >
      <div
        class="ciaxj5w soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;

exports[`Switch[Base] should render correctly about size 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px; align-items: center;"
>
  <button
    class="c-t2ecel soui-switch-wrapper cjmgw7o soui-switch-wrapper-small"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-tbhpld soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="cvbb1jt soui-switch-content"
    >
      <div
        class="ciaxj5w soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-t2ecel soui-switch-wrapper"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-tbhpld soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="cvbb1jt soui-switch-content"
    >
      <div
        class="ciaxj5w soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-t2ecel soui-switch-wrapper cjif0p4 soui-switch-wrapper-large"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-tbhpld soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="cvbb1jt soui-switch-content"
    >
      <div
        class="ciaxj5w soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;

exports[`Switch[Base] should render correctly about status 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px;"
>
  <button
    class="c-t2ecel soui-switch-wrapper cbjyctw soui-switch-wrapper-checked c-hwp035 soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-tbhpld soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="cvbb1jt soui-switch-content"
    >
      <div
        class="ciaxj5w soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-t2ecel soui-switch-wrapper c-hwp035 soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-tbhpld soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="cvbb1jt soui-switch-content"
    >
      <div
        class="ciaxj5w soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;
